[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycrdt-websocket"
version = "0.16.0"
description = "WebSocket connector for pycrdt"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "David Brochart", email = "david.brochart@gmail.com" },
]
keywords = [
    "websocket",
    "yjs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anyio >=3.6.2,<5",
    "pycrdt >=0.12.16,<0.13.0",
    "pycrdt-store >=0.1.0,<0.2.0",
]

[project.optional-dependencies]
django = [
    "channels",
]

[dependency-groups]
test = [
    "mypy !=1.10.0,!=1.10.1",  # see https://github.com/python/mypy/issues/17166
    "pre-commit",
    "pytest",
    "pytest-timeout",
    "httpx-ws >=0.5.2",
    "hypercorn >=0.16.0",
    "trio >=0.25.0",
    "sniffio",
    "channels",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.urls]
Homepage = "https://github.com/y-crdt/pycrdt-websocket"
Source = "https://github.com/y-crdt/pycrdt-websocket"
Issues = "https://github.com/y-crdt/pycrdt-websocket/issues"
Pypi = "https://pypi.org/project/pycrdt-websocket"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["src/pycrdt"]

[tool.ruff]
line-length = 99
lint.select = [
    "ASYNC",        # flake8-async
    "E", "F", "W",  # default Flake8
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]
